--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <style>
 :root {
-    --primary: #E0BBE4;
+    --primary: #b5b1ee;
     --accent: #90bedd;
     --bg: #f4f7f6;
     --text: #2c3e50;
@@ -175,7 +175,7 @@ footer {
     <input type="text" id="productName" placeholder="Nombre del producto">
     <input type="number" id="productPrice" placeholder="Precio">
     <input type="number" id="productQuantity" placeholder="Cantidad">
-    <input type="file" id="productImage" accept="image/*" capture="environment">
+    <input type="file" id="productImage" accept="image/*">
 
     <button type="submit">Publicar Producto</button>
 </form>
