--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@ body {
 }
 
 header {
-    background: var(--primary);
+    background: linear-gradient(135deg, var(--primary) 0%, rgba(255,255,255,0.1) 50%, var(--accent) 100%);
     text-align: center;
     padding: 30px;
+    border-bottom: 2px solid rgba(0,0,0,0.1);
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
 }
 
 .header-logo {
@@ -157,8 +159,8 @@ footer {
 
 <header>
     <img src="imagen/Logo1.jpg" class="header-logo">
-    <h1>Variedades García</h1>
-    <p>Productos de calidad importados desde usa</p>
+    <h1 style="font-family: 'Georgia', serif; font-size: 2.5em; font-weight: bold; color: var(--text);">Variedades García</h1>
+    <p style="font-family: 'Georgia', serif; font-size: 1.2em; color: var(--text);">Todos nuestros productos son de alta calidad y extraídos de USA</p>
     <a class="whatsapp-link" href="https://wa.me/44969900" target="_blank">
         Escríbenos por WhatsApp
     </a>
