para movil y pc

--- a/index.html
+++ b/index.html
@@ -152,6 +152,108 @@ footer {
     text-align: center;
     padding: 30px;
 }
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    header {
+        padding: 20px;
+    }
+
+    .header-logo {
+        width: 100px;
+        height: 100px;
+    }
+
+    h1 {
+        font-size: 2em !important;
+    }
+
+    p {
+        font-size: 1em !important;
+    }
+
+    .container {
+        padding: 0 10px;
+    }
+
+    .section {
+        padding: 15px;
+    }
+
+    .products {
+        grid-template-columns: 1fr;
+        gap: 15px;
+    }
+
+    .product {
+        padding: 10px;
+    }
+
+    .grid-2 {
+        grid-template-columns: 1fr;
+        gap: 15px;
+    }
+
+    .upload-form input,
+    .upload-form button {
+        padding: 10px;
+    }
+
+    .product button {
+        padding: 8px;
+        font-size: 14px;
+    }
+
+    table, th, td {
+        font-size: 14px;
+        padding: 8px;
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        padding: 15px;
+    }
+
+    .header-logo {
+        width: 80px;
+        height: 80px;
+    }
+
+    h1 {
+        font-size: 1.5em !important;
+    }
+
+    p {
+        font-size: 0.9em !important;
+    }
+
+    .section {
+        padding: 10px;
+        margin-bottom: 20px;
+    }
+
+    .products {
+        gap: 10px;
+    }
+
+    .product img {
+        max-height: 200px;
+    }
+
+    .product button {
+        padding: 6px;
+        font-size: 12px;
+    }
+
+    .inventory, .sales {
+        padding: 15px;
+    }
+
+    footer {
+        padding: 20px;
+    }
+}
 </style>
 </head>
 
@@ -353,6 +455,7 @@ function deleteSoldProduct(id) {
 
 document.getElementById("uploadForm").addEventListener("submit", function(e) {
     e.preventDefault();
+    console.log("Form submitted, isAdmin:", isAdmin);
     if (!isAdmin) {
         alert("Solo el administrador puede publicar productos");
         return;
@@ -362,6 +465,7 @@ document.getElementById("uploadForm").addEventListener("submit", function(e) {
     const price = productPrice.value || 0;
     const quantity = productQuantity.value || 0;
     const files = productImage.files;
+    console.log("Files selected:", files.length);
 
     if (files.length === 0) {
         alert("Selecciona al menos una imagen");
